@@ -1,0 +1,79 @@
+% $Id: ejabberd.app 733 2007-02-19 15:02:28Z mremond $
+
+{application, ejabberd,
+ [{description, "ejabberd"},
+  {vsn, "1.1.3"},
+  {modules, [acl,
+	     configure,
+	     cyrsasl,
+	     cyrsasl_digest,
+	     cyrsasl_plain,
+	     ejabberd,
+	     ejabberd_app,
+	     ejabberd_auth,
+	     ejabberd_c2s,
+	     ejabberd_config,
+	     ejabberd_listener,
+	     ejabberd_logger_h,
+	     ejabberd_local,
+	     ejabberd_router,
+	     ejabberd_s2s,
+	     ejabberd_s2s_in,
+	     ejabberd_s2s_out,
+	     ejabberd_service,
+	     ejabberd_sm,
+	     ejabberd_sup,
+	     ejabberd_tmp_sup,
+	     gen_iq_handler,
+	     gen_mod,
+	     jd2ejd,
+	     jlib,
+	     mod_configure,
+	     mod_disco,
+	     mod_echo,
+	     mod_last,
+	     mod_offline,
+	     mod_private,
+	     mod_register,
+	     mod_roster,
+	     mod_stats,
+	     mod_time,
+	     mod_vcard,
+	     mod_version,
+	     randoms,
+	     sha,
+	     shaper,
+	     translate,
+	     xml,
+	     xml_stream
+	    ]},
+  {registered, [ejabberd,
+		ejabberd_sup,
+		ejabberd_auth,
+		ejabberd_router,
+		ejabberd_sm,
+		ejabberd_s2s,
+		ejabberd_local,
+		ejabberd_listeners,
+		ejabberd_iq_sup,
+		ejabberd_service_sup,
+		ejabberd_s2s_out_sup,
+		ejabberd_s2s_in_sup,
+		ejabberd_c2s_sup,
+		ejabberd_mod_roster,
+		ejabberd_mod_echo,
+		ejabberd_mod_pubsub,
+		ejabberd_mod_irc,
+		ejabberd_mod_muc,
+		ejabberd_offline,
+		random_generator
+	       ]},
+  {applications, [kernel, stdlib]},
+  {env, []},
+  {mod, {ejabberd_app, []}}]}.
+
+
+
+% Local Variables:
+% mode: erlang
+% End:
