@@ -1,3 +1,9 @@
+2007-08-11  Badlop  <badlop@ono.com>
+
+	* src/ejabberd.app: Added from ejabberd trunk.
+	* src/ejabberd_sup.erl: Idem.
+	* Emakefile: Updated.
+
 2007-08-10  Badlop  <badlop@ono.com>
 
 	* src/mod_muc_room.erl, src/ejabberd_router.erl, 
